changed email contact

--- a/PHP/package.xml
+++ b/PHP/package.xml
@@ -8,9 +8,9 @@
     <summary>PHP Coding Standards</summary>
     <description>-</description>
     <lead>
-        <name>Box UK</name>
-        <user></user>
-        <email>coders@boxuk.com</email>
+        <name>Open</name>
+        <user>Source</user>
+        <email>opensource@boxuk.com</email>
         <active>yes</active>
     </lead>
     <date>2011-06-20</date>
