--- a/PHP/package.xml
+++ b/PHP/package.xml
@@ -4,7 +4,7 @@
     http://pear.php.net/dtd/package-2.0
     http://pear.php.net/dtd/package-2.0.xsd">
     <name>codingstandards</name>
-    <channel>pear.boxuk.com</channel>
+    <channel>pear.boxuk.net</channel>
     <summary>PHP Coding Standards</summary>
     <description>-</description>
     <lead>
