added php package call to pear-package target

--- a/build.xml
+++ b/build.xml
@@ -17,6 +17,7 @@
     
     <target name="pear-package" description="Create PEAR package for PHP standard">
         <phingcall target="pear-package-clean" />
+        <exec command="php package.php ${version}" passthru="true" checkReturn="true" />
         <exec dir="PHP" command="pear package" passthru="true" checkReturn="true" />
         <copy todir=".">
             <fileset dir="PHP">
